# egui_kit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
assets/: dark_theme.ron
docs/: toast.md
examples/: dialog_demo.rs  font_test.rs  icons_demo.rs  multi_lang_test.rs  showcase.rs  tree_basic.rs  tree_prefix_suffix.rs
examples/re_ui_example/: drag_and_drop.rs  hierarchical_drag_and_drop.rs  main.rs  right_panel.rs
src/: README.md  color_palette.rs  dialog.rs  icons.rs  lib.rs  logger.rs  presets.rs  theme_config.rs  toast.rs
src/components/: alert.rs  command.rs  dialog.rs  filter.rs  help.rs  mod.rs  modal.rs  notifications.rs  section_header.rs
src/components/basic/: icon.rs  icon_text.rs  mod.rs  text.rs
src/components/list_item/: button_content.rs  custom_content.rs  debug_content.rs  item_buttons.rs  label_content.rs  list_item.rs  property_content.rs  scope.rs
src/components/tree/: builder.rs  mod.rs  state.rs  types.rs  view.rs
src/extensions/: context_ext.rs  layout.rs  mod.rs  ui_ext.rs
src/extensions/egui_ext/: mod.rs  response_ext.rs
src/font/: mod.rs
src/foundation/: hot_reload.rs  mod.rs  presets.rs  theme.rs  tokens.rs
src/foundation/theme/: mod.rs
src/foundation/theme/style/: mod.rs
src/foundation/theme/style/dark/: ayu_dark.rs  cyberpunk.rs  deep_black.rs  dracula.rs  matrix.rs  mod.rs  modern_dark.rs  monokai.rs  nord.rs  one_dark.rs  tokyo_night.rs
src/foundation/theme/style/light/: catppuccin.rs  github_light.rs  gruvbox_light.rs  mod.rs  modern_light.rs  solarized_light.rs
src/interactions/: drag_and_drop.rs  mod.rs
src/testing/: mod.rs
src/utils/: datetime.rs  logger.rs  mod.rs  promise.rs
src/utils/font/: README.md  mod.rs
