[package]
name = "egui_kit"
version = "0.2.0"
edition = "2024"
authors = ["imxood@outlook.com"]
license = "MIT OR Apache-2.0"
description = "高质量 egui 组件库, 包括设计系统、UI组件、扩展方法和实用工具"
repository = "https://github.com/yourusername/egui_kit"
keywords = ["egui", "ui", "components", "theme", "widgets"]
categories = ["gui", "graphics"]
rust-version = "1.85"

[features]
default = ["basic-components", "serde", "markdown", "icons", "font"]

# 组件 features
basic-components = []
all-components = ["basic-components"]

# 功能 features
# 字体系统：包含预定义中文字体 + 系统字体自动检测
font = ["chinese"]
# 系统字体自动检测（需要扫描系统字体、检测系统语言）- 仅 Native 目标
system-font = ["dep:font-kit", "dep:sys-locale"]
# 预定义中文字体列表（与 system-font 配合使用）
chinese = []

# 图标 features（独立于字体系统）
icons = ["egui-phosphor"]
markdown = ["egui_commonmark"]
drag-and-drop = []

# 日志功能
logger = ["crossbeam-channel"]

# 异步功能
promise = []

# 测试 feature
testing = ["egui_kittest"]

[dependencies]
# 核心依赖
egui = "0.33"
eframe = { version = "0.33", features = ["wgpu"] }
indexmap = "2.12"

# 组件依赖
egui_extras = { version = "0.33", features = ["image", "svg"] }
egui_tiles = "0.14"
ahash = "0.8"
anyhow = "1.0"
itertools = "0.14.0"
jiff = "0.2"
num-traits = "0.2"
ron = "0.12.0"
smallvec = "1.13"
strum_macros = "0.27"
strum = { version = "0.27", features = ["derive"] }
sublime_fuzzy = "0.7"
url = "2.5"
getrandom = "0.3"

# 日志
log = "0.4"

# 序列化
serde = { version = "1.0", features = ["derive"], optional = true }

# 字体加载
font-kit = { version = "0.14.3", optional = true }
sys-locale = { version = "0.3", optional = true }

# 日志系统
chrono = { version = "0.4" }
web-time = "1.1"
crossbeam-channel = { version = "0.5", optional = true }

# 图标
egui-phosphor = { version = "0.11", optional = true }

# Promise - tokio 异步运行时
tokio = { version = "1", features = ["rt", "sync", "test-util", "macros"] }

# Markdown
egui_commonmark = { version = "0.22", features = [
    "pulldown_cmark",
], optional = true }

# 测试
egui_kittest = { version = "0.33", optional = true }

# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "8.2"
# parking_lot 仅用于 hot_reload 模块 (native-only)
parking_lot = "0.12"

# WASM - web-time 需要这些依赖才能在浏览器上工作
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Mac-specific
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
raw-window-handle = "0.6"

[dev-dependencies]
eframe = "0.33.2"
env_logger = "0.11"
egui_kittest = "0.33"
rand = "0.9"

[[example]]
name = "showcase"
path = "examples/showcase.rs"

[[example]]
name = "dialog_demo"
path = "examples/dialog_demo.rs"

[[example]]
name = "icons_demo"
path = "examples/icons_demo.rs"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "egui_kit_example"
path = "examples/re_ui_example/main.rs"
